--- a/src/app/alumno/alumno.new.component.html
+++ b/src/app/alumno/alumno.new.component.html
@@ -71,11 +71,11 @@
                     <div class="ui-grid-row">    
                         <div class="ui-grid-col-4">
                                 <!--input  type="text" style="width:100%" pInputText   [pKeyFilter]="blockSpecial" [pValidateOnly]="false" formControlName="nombre" /-->
-                                <p-calendar formControlName="fechaNacimiento" [locale]="es"  [monthNavigator]="true" [yearNavigator]="true" yearRange="1990:2030" dateFormat="dd/mm/yy" formControlName="fechaNacimiento" [showIcon]="true"></p-calendar>
+                                <p-calendar formControlName="fechaNacimientoUnbinding" [locale]="es"  [monthNavigator]="true" [yearNavigator]="true" yearRange="1990:2030" dateFormat="dd/mm/yy"  [showIcon]="true"></p-calendar>
                         </div>
                         <div class="ui-grid-col-4">
                             <p-message severity="error" text="Ingrese una fecha de nacimiento" 
-                                *ngIf="alumnoForm.get('fechaNacimiento').dirty && alumnoForm.get('fechaNacimiento').errors && alumnoForm.get('fechaNacimiento').errors.required"></p-message>
+                                *ngIf="alumnoForm.get('fechaNacimientoUnbinding').dirty && alumnoForm.get('fechaNacimientoUnbinding').errors && alumnoForm.get('fechaNacimientoUnbinding').errors.required"></p-message>
                         </div>
                     </div>
                     
