--- a/src/app/alumno/alumno.new.component.html
+++ b/src/app/alumno/alumno.new.component.html
@@ -158,7 +158,7 @@
                     </div>
                     <div class="ui-grid-row">    
                         <div class="ui-grid-col-4">
-                                <p-inputMask mask="99-99.999.999-9" formControlName="cuil" ></p-inputMask>
+                                <p-inputMask mask="99-99999999-9" formControlName="cuil" ></p-inputMask>
                         </div>
                         <div class="ui-grid-col-4">
                             <p-message severity="error" text="Ingrese un C.U.I.L válido" 
@@ -234,7 +234,7 @@
                             </div>
                             <div class="ui-grid-row">    
                                 <div class="ui-grid-col-4">
-                                        <p-inputMask mask="99-99.999.999-9" formControlName="cuilTutor" ></p-inputMask>
+                                        <p-inputMask mask="99-99999999-9" formControlName="cuilTutor" ></p-inputMask>
                                 </div>
                                 <div class="ui-grid-col-4">
                                     <p-message severity="error" text="Ingrese un C.U.I.L válido" 
@@ -318,7 +318,7 @@
             
             <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">                
                 <div class="ui-grid-col-2">
-                    <p-checkbox formControlName="constaciaRegular" label="Constancia alumno regular" binary="true"></p-checkbox>
+                    <p-checkbox formControlName="constanciaRegular" label="Constancia alumno regular" binary="true"></p-checkbox>
                 </div>
                 <div class="ui-grid-col-2">    
                     <p-checkbox formControlName="foto4x4" label="Foto 4x4" binary="true"></p-checkbox>
