--- a/src/app/shared/layout/header.component.html
+++ b/src/app/shared/layout/header.component.html
@@ -21,7 +21,7 @@
               </a>          
           </ng-template>
           <ng-template #yo>
-              <span><a class="nav-link" routerLink="" (click)="overlay_yo.toggle($event)" > <i class="fa fa-user fa-2x"></i> yo</a></span>
+              <span><a class="nav-link" routerLink="[]" (click)="overlay_yo.toggle($event)" > <i class="fa fa-user fa-2x"></i> yo</a></span>
               
               <p-overlayPanel #overlay_yo [showCloseIcon]="true">
                   <ul class="nav navbar-nav pull-xs-right"> 
