--- a/src/app/alumno/alumno.new.component.html
+++ b/src/app/alumno/alumno.new.component.html
@@ -28,7 +28,7 @@
                     </div>
                     <div class="ui-grid-row">    
                         <div class="ui-grid-col-4">
-                                <input  style="width:100%" type="text"  formControlName="apellido" pInputText [pKeyFilter]="noSpecial" [pValidateOnly]="false" >                                
+                                <input  style="width:100%" type="text"  formControlName="apellido" pInputText [pKeyFilter]="noSpecial" [pValidateOnly]="false">                                
                         </div>
                         <div class="ui-grid-col-4">
                             <p-message severity="error" text="Ingrese apellido del alumno" 
@@ -144,7 +144,7 @@
                         </div>
                         <div class="ui-grid-col-4">
                             <p-message severity="error" text="Ingrese una dirección del alumno" 
-                                *ngIf="alumnoForm.get('apellido').dirty && alumnoForm.get('direccion').errors && alumnoForm.get('direccion').errors.required"></p-message>
+                                *ngIf="alumnoForm.get('direccion').dirty && alumnoForm.get('direccion').errors && alumnoForm.get('direccion').errors.required"></p-message>
                         </div>
                     </div>
                 
@@ -199,7 +199,7 @@
                             </div>
                             <div class="ui-grid-col-4">
                                 <p-message severity="error" text="Ingrese apellido del tutor" 
-                                    *ngIf="alumnoForm.get('apellidoTutor').dirty && alumnoForm.get('apellido').errors && alumnoForm.get('apellidoTutor').errors.required"></p-message>
+                                    *ngIf="alumnoForm.get('apellidoTutor').dirty && alumnoForm.get('apellidoTutor').errors && alumnoForm.get('apellidoTutor').errors.required"></p-message>
                             </div>
                         </div>
     
