--- a/src/app/alumno/alumno.list.component.html
+++ b/src/app/alumno/alumno.list.component.html
@@ -5,12 +5,14 @@
                     Filtro:
                 </div>
             </div>
-            <div class="ui-grid-row">    
+            <div class="ui-grid-row">  
+                  
                 <div class="ui-grid-col-4">
-                        <p-inputMask mask="99.999.999" formControlName="dni" ></p-inputMask>
+                        <input  style="width:100%" type="text"   pInputText [pKeyFilter]="noSpecial" [pValidateOnly]="false"/>                                
                 </div>
             </div>
         </div>   
+<div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">        
 <p-virtualScroller [value]="alumnos" scrollHeight="500px" [itemSize]="150" [rows]="20" [cache]="false" 
     [lazy]="true" (onLazyLoad)="loadData($event)" [totalRecords]="totalLazyAlumnoLength">
         <ng-template let-alumno pTemplate="item">
@@ -45,3 +47,4 @@
         
     </ng-template>        
 </p-virtualScroller>        
+</div>
