--- a/src/app/alumno/alumno.list.component.html
+++ b/src/app/alumno/alumno.list.component.html
@@ -8,7 +8,7 @@
             <div class="ui-grid-row">  
                   
                 <div class="ui-grid-col-4">
-                        <input  style="width:100%" type="text"   pInputText [pKeyFilter]="noSpecial" [pValidateOnly]="false"/>                                
+                        <input [ngModel]="filter"  style="width:100%" type="text"   pInputText [pKeyFilter]="noSpecial" [pValidateOnly]="false"/>                                
                 </div>
             </div>
         </div>   
