--- a/src/app/alumno/alumno.new.component.html
+++ b/src/app/alumno/alumno.new.component.html
@@ -3,6 +3,19 @@
     <p-tabView>
        
         <p-tabPanel header="Datos del Alumno">     
+                <div *ngIf="alumnoForm.get('id').value!=null" class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
+                    <div class="ui-grid-row">
+                            <div class="ui-grid-col-2">
+                                Id:
+                            </div>
+                            <div class="ui-grid-row">    
+                                    <div class="ui-grid-col-4">
+                                        <input formControlName="id" disabled />
+                                    </div>
+
+                            </div>    
+                    </div>                    
+                </div>
                 <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">
                     <div class="ui-grid-row">
                         <div class="ui-grid-col-2">
