--- a/src/app/shared/layout/header.component.html
+++ b/src/app/shared/layout/header.component.html
@@ -3,7 +3,7 @@
 </p-sidebar-->
 <div class="ui-g" > 
     <div class="ui-g-4" *ngIf="currentUser | async">
-      <p-slideMenu #menu [model]="items" [popup]="true" [viewportHeight]="250"></p-slideMenu>
+      <p-slideMenu #menu [model]="items" [backLabel]="Back" [popup]="true" [viewportHeight]="250"></p-slideMenu>
 
       <button type="text" (click)="menu.toggle($event)" 
         pButton icon="fa fa-bars" label="Menu"></button>      
@@ -21,7 +21,7 @@
               </a>          
           </ng-template>
           <ng-template #yo>
-              <span><a class="nav-link" routerLink="[]" (click)="overlay_yo.toggle($event)" > <i class="fa fa-user fa-2x"></i> yo</a></span>
+              <span><a class="nav-link"  (click)="clickOverlay($event)" > <i class="fa fa-user fa-2x"></i> yo</a></span>
               
               <p-overlayPanel #overlay_yo [showCloseIcon]="true">
                   <ul class="nav navbar-nav pull-xs-right"> 
