--- a/src/app/alumno/alumno.new.component.html
+++ b/src/app/alumno/alumno.new.component.html
@@ -1,5 +1,6 @@
 
 <form [formGroup]="alumnoForm" (ngSubmit)="onSubmit(alumnoForm.value)">
+    <p-panel header="{{headerTitle}}">
     <p-tabView>
        
         <p-tabPanel header="Datos del Alumno">     
@@ -388,7 +389,8 @@
             </div>            
         </p-tabPanel>                
 
-</p-tabView>                         
+</p-tabView>         
+</p-panel>                
         <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid"  style="margin: 10px 0px">
                 
 
