--- a/src/app/security/usuario.component.html
+++ b/src/app/security/usuario.component.html
@@ -11,35 +11,72 @@
                                 <input  style="width:100%" type="text"  formControlName="userName"/>                                
                         </div>
                         <div class="ui-grid-col-4">
-                            <p-message severity="error" text="Nombre de Usuario" 
+                            <p-message severity="error" text="Nombre de Usuario es obligatorio" 
                                 *ngIf="usuarioForm.get('userName').dirty && usuarioForm.get('userName').errors && usuarioForm.get('userName').errors.required"></p-message>
                         </div>
                     </div>
-
                 
                 </div>  
             
-            
-
-                <!--div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">   
+                <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">   
                     <div class="ui-grid-row">
                         <div class="ui-grid-col-2">
-                            Password *:
+                            Contraseña *:
+                        </div>
+                    </div>
+                        
+                        <div class="ui-grid-row">   
+                           
+                            <div class="ui-grid-col-4">
+
+                                    <input  style="width:100%" type="text"  formControlName="password"/>     
+                            
+                            </div>
+                            <div class="ui-grid-col-4">
+                                <p-message severity="error" text="Contraseña es obligatorio" 
+                                    *ngIf="usuarioForm.get('password').dirty && usuarioForm.get('password').errors && usuarioForm.get('password').errors.required"></p-message>
+                            </div>
+                        </div>
+                
+                </div>              
+
+                <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">   
+                    <div class="ui-grid-row">
+                        <div class="ui-grid-col-2">
+                            Apellido *:
                         </div>
                     </div>
                     <div class="ui-grid-row">    
                         <div class="ui-grid-col-4">
-                                <input  style="width:100%" type="text"  formControlName="password"  >                                
+                                <input  style="width:100%" type="text"  formControlName="apellido"/>                                
                         </div>
                         <div class="ui-grid-col-4">
-                            <p-message severity="error" text="Ingrese contraseña" 
-                                *ngIf="alumnoForm.get('password').dirty && alumnoForm.get('password').errors && alumnoForm.get('password').errors.required"></p-message>
+                            <p-message severity="error" text="Apellido es obligatorio" 
+                                *ngIf="usuarioForm.get('apellido').dirty && usuarioForm.get('apellido').errors && usuarioForm.get('apellido').errors.required"></p-message>
                         </div>
                     </div>
-                    
-
                 
-                </div-->  
+                </div>  
+
+                <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">   
+                    <div class="ui-grid-row">
+                        <div class="ui-grid-col-2">
+                            Nombre *:
+                        </div>
+                    </div>
+                    <div class="ui-grid-row">    
+                        <div class="ui-grid-col-4">
+                                <input  style="width:100%" type="text"  formControlName="nombre"/>                                
+                        </div>
+                        <div class="ui-grid-col-4">
+                            <p-message severity="error" text="Nombre es obligatorio" 
+                                *ngIf="usuarioForm.get('nombre').dirty && usuarioForm.get('nombre').errors && usuarioForm.get('nombre').errors.required"></p-message>
+                        </div>
+                    </div>
+                
+                </div>  
+
+
 
 
         </p-panel>
