--- a/src/app/security/usuario.component.html
+++ b/src/app/security/usuario.component.html
@@ -29,7 +29,7 @@
                            
                             <div class="ui-grid-col-4">
 
-                                    <input  style="width:100%" type="text"  formControlName="password"/>     
+                                    <input type="{{typeInputPassword}}"  style="width:100%"   formControlName="password"/>     
                             
                             </div>
                             <div class="ui-grid-col-4">
