--- a/src/app/alumno/alumno.new.component.html
+++ b/src/app/alumno/alumno.new.component.html
@@ -11,7 +11,7 @@
                             </div>
                             <div class="ui-grid-row">    
                                     <div class="ui-grid-col-4">
-                                        <input formControlName="id" disabled />
+                                        <input style="width:100%"   formControlName="id" disabled />
                                     </div>
 
                             </div>    
@@ -25,7 +25,7 @@
                     </div>
                     <div class="ui-grid-row">    
                         <div class="ui-grid-col-4">
-                                <p-inputMask mask="99.999.999" formControlName="dni" ></p-inputMask>
+                                <p-inputMask  mask="99.999.999" formControlName="dni" ></p-inputMask>
                         </div>
                         <div class="ui-grid-col-4">
                             <p-message severity="error" text="Ingrese un D.N.I válido" 
@@ -42,7 +42,7 @@
                     </div>
                     <div class="ui-grid-row">    
                         <div class="ui-grid-col-4">
-                                <input  style="width:100%" type="text"  formControlName="apellido" pInputText [pKeyFilter]="noSpecial" [pValidateOnly]="false">                                
+                                <input class="form-control"  style="width:100%" type="text"  formControlName="apellido" pInputText [pKeyFilter]="noSpecial" [pValidateOnly]="false">                                
                         </div>
                         <div class="ui-grid-col-4">
                             <p-message severity="error" text="Ingrese apellido del alumno" 
@@ -64,7 +64,7 @@
                     <div class="ui-grid-row">    
                         <div class="ui-grid-col-4">
                                 <!--input  type="text" style="width:100%" pInputText   [pKeyFilter]="blockSpecial" [pValidateOnly]="false" formControlName="nombre" /-->
-                                <input  style="width:100%" type="text"  formControlName="nombre" pInputText [pKeyFilter]="noSpecial" [pValidateOnly]="false" >                                
+                                <input class="form-control" style="width:100%" type="text"  formControlName="nombre" pInputText [pKeyFilter]="noSpecial" [pValidateOnly]="false" >                                
                         </div>
                         <div class="ui-grid-col-4">
                             <p-message severity="error" text="Ingrese nombre del alumno" 
@@ -85,7 +85,7 @@
                     <div class="ui-grid-row">    
                         <div class="ui-grid-col-4">
                                 <!--input  type="text" style="width:100%" pInputText   [pKeyFilter]="blockSpecial" [pValidateOnly]="false" formControlName="nombre" /-->
-                                <p-calendar formControlName="fechaNacimientoUnbinding" [locale]="es"  [monthNavigator]="true" [yearNavigator]="true" yearRange="1990:2030" dateFormat="dd/mm/yy"  [showIcon]="true"></p-calendar>
+                                <p-calendar  formControlName="fechaNacimientoUnbinding" [locale]="es"  [monthNavigator]="true" [yearNavigator]="true" yearRange="1990:2030" dateFormat="dd/mm/yy"  [showIcon]="true"></p-calendar>
                         </div>
                         <div class="ui-grid-col-4">
                             <p-message severity="error" text="Ingrese una fecha de nacimiento" 
@@ -154,7 +154,7 @@
                     </div>
                     <div class="ui-grid-row">    
                         <div class="ui-grid-col-4">
-                                <input  style="width:100%" type="text"  formControlName="direccion" pInputText >                                
+                                <input class="form-control"  style="width:100%" type="text"  formControlName="direccion" pInputText >                                
                         </div>
                         <div class="ui-grid-col-4">
                             <p-message severity="error" text="Ingrese una dirección del alumno" 
@@ -209,7 +209,7 @@
                         </div>
                         <div class="ui-grid-row">    
                             <div class="ui-grid-col-4">
-                                    <input  style="width:100%" type="text"  formControlName="apellidoTutor" pInputText [pKeyFilter]="noSpecial" [pValidateOnly]="false" >                                
+                                    <input class="form-control"  style="width:100%" type="text"  formControlName="apellidoTutor" pInputText [pKeyFilter]="noSpecial" [pValidateOnly]="false" >                                
                             </div>
                             <div class="ui-grid-col-4">
                                 <p-message severity="error" text="Ingrese apellido del tutor" 
@@ -231,7 +231,7 @@
                         <div class="ui-grid-row">    
                             <div class="ui-grid-col-4">
                                     <!--input  type="text" style="width:100%" pInputText   [pKeyFilter]="blockSpecial" [pValidateOnly]="false" formControlName="nombre" /-->
-                                    <input  style="width:100%" type="text"  formControlName="nombreTutor" pInputText [pKeyFilter]="noSpecial" [pValidateOnly]="false" >                                
+                                    <input class="form-control"  style="width:100%" type="text"  formControlName="nombreTutor" pInputText [pKeyFilter]="noSpecial" [pValidateOnly]="false" >                                
                             </div>
                             <div class="ui-grid-col-4">
                                 <p-message severity="error" text="Ingrese nombre del tutor" 
