--- a/src/app/security/perfil.component.html
+++ b/src/app/security/perfil.component.html
@@ -18,6 +18,20 @@
 
                 
                 </div>  
+
+                <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px"> 
+                    <div class="ui-grid-row">
+                        <div class="ui-grid-col-4">
+                            <p-panel header="{{headerTitle}}">
+
+                            </p-panel>
+                        </div>
+                        <div class="ui-grid-col-4">
+                            <p-panel header="{{headerTitle}}">
+                                
+                        </div>                        
+                    </div>                    
+                </div>    
         
     </p-panel>    
 
