--- a/src/app/security/perfil.component.html
+++ b/src/app/security/perfil.component.html
@@ -21,13 +21,18 @@
 
                 <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px"> 
                     <div class="ui-grid-row">
-                        <div class="ui-grid-col-4">
-                            <p-panel header="{{headerTitle}}">
+                        <div class="ui-grid-col-5">
+                            <p-panel header="Acciones REST Disponibles">
 
                             </p-panel>
                         </div>
-                        <div class="ui-grid-col-4">
-                            <p-panel header="{{headerTitle}}">
+                        <div class="ui-grid-col-2">
+                            <button class="hidden-md hidden-sm hidden-sm-up"><i class="fa fa-hand-o-right" aria-hidden="true"></i></button>
+                        </div>
+                        <div class="ui-grid-col-5">
+                            <p-panel header="Agregadas">
+
+                            </p-panel>
                                 
                         </div>                        
                     </div>                    
