--- a/src/app/alumno/alumno.list.component.html
+++ b/src/app/alumno/alumno.list.component.html
@@ -13,7 +13,7 @@
             </div>
         </div>   
 <div class="ui-grid ui-grid-responsive ui-grid-pad ui-fluid" style="margin: 10px 0px">        
-<p-virtualScroller [value]="alumnos" scrollHeight="500px" [itemSize]="150" [rows]="20" [cache]="false" 
+<p-virtualScroller [value]="alumnos" scrollHeight="500px" [itemSize]="130" [rows]="10" [cache]="false" 
     [lazy]="true" (onLazyLoad)="loadData($event)" [totalRecords]="totalLazyAlumnoLength">
         <ng-template let-alumno pTemplate="item">
             <div class="ui-g-12 ui-md-8">
@@ -34,10 +34,10 @@
                 </div>
             </div>
         </ng-template>     
-    <ng-template let-alumno pTemplate="loadingItem">
-        
+    <!--ng-template let-alumno pTemplate="loadingItem">
+            
             <div class="ui-g-12 ui-md-8">
-                <div class="ui-g">
+                <div  class="ui-g">
                     <div class="ui-g-12"><div class="empty-car-item-text"></div></div>
                     <div class="ui-g-12"><div class="empty-car-item-text"></div></div>
                     <div class="ui-g-12"><div class="empty-car-item-text"></div></div>
@@ -45,6 +45,6 @@
                 </div>
             </div>
         
-    </ng-template>        
+    </ng-template-->        
 </p-virtualScroller>        
 </div>
