--- a/src/app/security/perfil.component.html
+++ b/src/app/security/perfil.component.html
@@ -27,7 +27,10 @@
                             </p-panel>
                         </div>
                         <div class="ui-grid-col-2">
-                            <button class="hidden-md hidden-sm hidden-sm-up"><i class="fa fa-hand-o-right" aria-hidden="true"></i></button>
+                            <button class="hidden-xs-down-639"><i class="fa fa-hand-o-down" aria-hidden="true"></i></button>
+                                           
+
+                            <button class="hidden-xs-down"><i class="fa fa-hand-o-right" aria-hidden="true"></i></button>
                         </div>
                         <div class="ui-grid-col-5">
                             <p-panel header="Agregadas">
