--- a/src/styles.css
+++ b/src/styles.css
@@ -9,18 +9,20 @@
   display: none !important;
 }
 
-@media (max-width: 575px) {
+
+
+@media screen and (max-width: 640px) {
   .hidden-xs-down {
     display: none !important;
   }
 }
 
-@media (min-width: 576px) {
-  .hidden-sm-up {
+@media screen and (min-width:641px) {
+  .hidden-xs-down-639 {
     display: none !important;
   }
 }
-
+/*
 @media (max-width: 767px) {
   .hidden-sm-down {
     display: none !important;
@@ -60,3 +62,4 @@
 .hidden-xl-down {
   display: none !important;
 }
+*/
