--- a/src/app/security/perfil.component.html
+++ b/src/app/security/perfil.component.html
@@ -23,7 +23,7 @@
                     <div class="ui-grid-row">
                         <div class="ui-grid-col-6">
                             <p-panel header="Acciones REST Disponibles">
-                                <p-virtualScroller [value]="authorities" scrollHeight="500px" [itemSize]="80" [rows]="5" [cache]="false" 
+                                <p-virtualScroller [value]="authorities" scrollHeight="500px" [itemSize]="90" [rows]="5" [cache]="false" 
                                 [lazy]="true" (onLazyLoad)="loadData($event)" [totalRecords]="totalLazyAuthoritiesLength">
                                     <ng-template let-authority pTemplate="item">
                                         <div class="ui-g-12 ui-md-8">
@@ -34,7 +34,10 @@
                                                 </div>
                                     
                                                 <div class="ui-g-4 ui-sm-5">Descripción: </div>
-                                                <div class="ui-g-6 ui-sm-6">{{authority?.descripcion}}</div>
+                                                <div class="ui-g-7 ui-sm-6">{{authority?.descripcion}}</div>
+                                                <div class="ui-g-1 ui-sm-1">
+                                                    <button (click)="addAuthority(authority)"><i class="fa fa-hand-o-right" aria-hidden="true"></i></button>
+                                                </div>
                                             </div>
                                         </div>
                                     </ng-template>     
@@ -61,7 +64,37 @@
                         </div>
                         <div class="ui-grid-col-5">
                             <p-panel header="Agregadas">
-
+                                    <p-virtualScroller [value]="authoritiesAdded" scrollHeight="500px" [itemSize]="90" [rows]="5" [cache]="false" 
+                                    [lazy]="true" (onLazyLoad)="loadData($event)" [totalRecords]="totalLazyAuthoritiesAddedLength">
+                                        <ng-template let-authorityAdded pTemplate="item">
+                                            <div class="ui-g-12 ui-md-8">
+                                                <div class="ui-g">
+                                                    <div class="ui-g-4 ui-sm-6">id: </div>
+                                                    <div class="ui-g-6 ui-sm-6">
+                                                        {{authorityAdded?.id}}
+                                                    </div>
+                                        
+                                                    <div class="ui-g-4 ui-sm-5">Descripción: </div>
+                                                    <div class="ui-g-7 ui-sm-6">{{authorityAdded?.descripcion}}</div>
+                                                    <div class="ui-g-1 ui-sm-1">
+                                                        <button (click)="addAuthority(authority)"><i class="fa fa-hand-o-right" aria-hidden="true"></i></button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </ng-template>     
+                                    <!--ng-template let-alumno pTemplate="loadingItem">
+                                            
+                                            <div class="ui-g-12 ui-md-8">
+                                                <div  class="ui-g">
+                                                    <div class="ui-g-12"><div class="empty-car-item-text"></div></div>
+                                                    <div class="ui-g-12"><div class="empty-car-item-text"></div></div>
+                                                    <div class="ui-g-12"><div class="empty-car-item-text"></div></div>
+                                                    <div class="ui-g-12"><div class="empty-car-item-text"></div></div>
+                                                </div>
+                                            </div>
+                                        
+                                    </ng-template-->        
+                                </p-virtualScroller>  
                             </p-panel>
                                 
                         </div>                        
